# quickdna

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-wheels.sh  build.yaml  python.yml  release.yaml  rust.yml
benches/: all_windows.rs  canonical.rs  combo_hashing.rs  expansions.rs
benchmarks/: bench.py  covid.txt
quickdna/: __init__.py
src/: amino_acid.rs  canonical.rs  errors.rs  expansions.rs  extendable.rs  fasta.rs  iter.rs  lib.rs  nucleotide.rs  permute.rs  prototype.rs  python_api.rs  quickcheck.rs  rust_api.rs  serde_utils.rs  trans_table.rs
tests/: __init__.py  conftest.py  integration_tests.rs  test_exhaustive.py  test_hypothesis.py  test_wrapper.py  utils.py
