[package]
name = "quickdna"
version = "0.3.0"
edition = "2021"
authors = ["Theia Vogel <theia@vgel.me>"]
publish = false

[dependencies]
lazy_static = "1.4.0"
thiserror = "1.0.30"
smallvec = "1.8.0"
pyo3 = {version = "0.17.1", features = ["extension-module"], optional = true}
quickcheck = {version = "1.0.3", optional = true}
serde = {version = "1.0", features = ["derive"], optional = true}
serde_json = {version = "1", optional = true}
serde_with = {version = "1.9", optional = true}

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"

[lib]
name = "quickdna"
crate-type = ["cdylib", "rlib"]

[features]
python-support = ["dep:pyo3"]
serde = ["dep:serde", "dep:serde_json", "dep:serde_with"]
default = ["python-support", "serde"]

[[bench]]
name = "all_windows"
harness = false
