[package]
name = "quickdna"
version = "0.5.0"
edition = "2021"
authors = ["Theia Vogel <theia@vgel.me>"]
publish = false

[dependencies]
lazy_static = "1.4.0"
thiserror = "1.0.30"
smallvec = "1.8.0"
pyo3 = {version = "0.18.0", features = ["extension-module"], optional = true}
quickcheck = {version = "1.0.3", optional = true}
serde = {version = "1.0", features = ["derive"], optional = true}

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"
serde_json = "1"

[lib]
name = "quickdna"
crate-type = ["cdylib", "rlib"]

[features]
python-support = ["dep:pyo3"]
serde = ["dep:serde"]
default = ["python-support"]

[[bench]]
name = "all_windows"
harness = false
