[package]
name = "quickdna"
version = "0.6.0"
edition = "2021"
authors = ["SecureDNA Dev Team <dev@securedna.org"]
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
lazy_static = "1.4.0"
thiserror = "1.0.30"
smallvec = "1.8.0"
pyo3 = {version = "0.27.1", features = ["extension-module"], optional = true}
quickcheck = {version = "1.0.3", optional = true}
serde = {version = "1.0", features = ["derive"], optional = true}

[dev-dependencies]
criterion = "0.8.0"
quickcheck = "1.0.3"
rand = "0.8.5"
serde_json = "1"

[lib]
name = "quickdna"
crate-type = ["cdylib", "rlib"]

[features]
python-support = ["dep:pyo3"]
serde = ["dep:serde"]
default = ["python-support"]

[[bench]]
name = "all_windows"
harness = false

[[bench]]
name = "canonical"
harness = false

[[bench]]
name = "expansions"
harness = false
