[tool.poetry]
name = "quickdna"
version = "0.6.0"
description = "Fast implementation of DNA translation in Rust"
authors = ["Theia Vogel <theia@vgel.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/SecureDNA/quickdna"


[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^9.0"
pylint = "^2.6"
flake8 = "^3.9"
wheel = "*"
pytest-runner = "*"
pytest-benchmark = "*"
hypothesis = "*"
black = "*"
maturin = "==0.9.4"
biopython = "^1.79"

[build-system]
requires = ["maturin==0.9.4"]
build-backend = "maturin"
